@@ -20,7 +20,7 @@ with open("README.md","r") as readme:
 
 setup(
     name="MirMachine",
-    version="0.2.13rc4",
+    version="0.2.13rc5",
     packages=find_packages(exclude=('tests*','testing*')),
     scripts=["scripts/MirMachine.py","scripts/mirmachine-tree-parser.py","scripts/gff_sort_and_compete.sh","scripts/seed_detector.py"],
     long_description=long_description,
