@@ -3,10 +3,11 @@
   - cmsearch --incE 0.2 argument is added to the cmsearch command. 
   - fewer than 50 nucleotides are not considered as a hit anymore.
   - GFF files have "MirMachine" and "microRNA" fields that replaced the previous fields.
+  - Check if the genome file is available.
 ## Added
   - microRNA score reported in GFF files.
   - microRNA losses reported in GFF files
-  - Seed match reported in FASTA headers.
+  - Seed match reported in FASTA headers with seeds.
 
 ## [0.2.12] - 2023-02-17
 ### Changed
